# Toki

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  env.sh  pyproject.toml  refcheck.sh
.github/workflows/: ci.yml
docs/: RUNBOOK.md  SPEC.md  TESTPLAN.md  cleanup.md  examples.md  public_api.md
patches/: README.md  jcal-lunisolar.patch  jcal_lunisolar_patched.py
scripts/: apply_patches.sh  make_clean_jcal_snapshot.py  parse_jcal_debug.py  repro_jcal_2033.py
src/jcal/api/: __init__.py  app.py  public.py
src/jcal/core/: __init__.py  astronomy.py  build_astronomy_events.py  config.py  leap_month.py  lunisolar.py  month_naming.py  newmoon.py  rootfind.py  solarterms.py  solstice_anchor.py  timeutil.py
src/jcal/features/: config.py  lunar_months.py  rokuyo.py  (+1 more)
src/shintoki/: __init__.py  __main__.py  cli.py  logging.py
tests/: test_api_cli.py  test_api_golden.py  test_api_http.py  test_cli_parser.py  test_dbapi_datastore.py  test_dbapi_http.py  test_debug_compare.py  test_debug_months.py  test_debug_solstice.py  test_debug_spans.py  test_debug_sweep.py  test_debug_term.py  test_debug_terms.py  test_doctor.py  test_export_cli.py  test_export_data.py  test_lunisolar_2033.py  test_month_naming.py  test_public_api.py  test_public_calendar_sunrise_sunset.py
tests/fixtures/: golden_day_2017-06-09.json
tmp/: jcal_debug_2033_summary.json  jcal_lunisolar_patched.py
tools/: __init__.py  common.py  leap_month_check.py  lunisolar_check.py  rokuyo_check.py  sekki24_check.py  zhongqi_check.py
web/: index.html
(+25 files in other folders)
